# CPProj

./: CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json  package.json
layout/: index.html  main.js  style.css
layouts/: common-style.css
layouts/create-class/: index.html  main.js
layouts/structure/: index.html  main.js  style.css
src/: convertion.js  createClass.js  extension.js  files.js  git.js  pch.h  structure.js  templates.js  terminal.js  util.js  webviewAssembler.js
src/modules/: create-class.js  files.js  info.js  structure.js  util.js  webviewAssembler.js
src/window/: window.h
templates/: CMakeLists.txt  class.cpp  class.h
test/: test.js
